Added all files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-Hello World
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset = "UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Aliya Renee Khan</title>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link href="may2017.css" type="text/css" rel="stylesheet">
+
+    
+</head>
+<body>
+    
+
+    <a name = "home">
+    <section class = "home">
+        <nav class = "main-nav">
+                <ul>
+                <li><a href = "/about">About</a> /</li> 
+                <li><a href= "/personal">Personal</a> /</li>
+                <li><a href= "/professional">Professional</a> /</li>
+                <li><a href = "/contact">Contact</a></li>
+                </ul>
+         </nav>
+        <div class="header">
+            <h1>Aliya Renee Khan</h1>
+        </div>
+
+ 
+    </section>
+
+
+    <div class = "footer">
+            <p>© 2017 Aliya Renee Khan</p>
+    </div>
+
+</body>
+
+</html>
