Fixed about links

--- a/about/index.html
+++ b/about/index.html
@@ -29,15 +29,15 @@
 			</p>
 
 			<p class = "more">
-			For more information about my experience with software, click <a>here</a>
+			For more information about my experience with software, click <a href = "/professional">here</a>
 			</p>
 
 			<p class = "more">
-			To read my blog, click <a>here</a>. It would be impossible to define myself or my writing by a category such as sports or fashion, so the blog has a variety of miscellaneous articles ranging from lighthearted stories about my latest favorite chocolate croissant in Ann Arbor to more serious articles about my take environmental and humanitarian issues. 
+			To read my blog, click <a href = "/personal">here</a>. It would be impossible to define myself or my writing by a category such as sports or fashion, so the blog has a variety of miscellaneous articles ranging from lighthearted stories about my latest favorite chocolate croissant in Ann Arbor to more serious articles about my take environmental and humanitarian issues. 
 			</p>
 
 			<p class = "more">
-			I would love to hear any type of feedback you might have for me. To contact me, click <a>here</a>
+			I would love to hear any type of feedback you might have for me. To contact me, click <a href = "/contact">here</a>
 			</p>
 			</div>
 	</section>
