--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<a href="#" class="image avatar"><img src="images/LA_PROF_PIC.jpg" alt="" /></a>
 					<h1><strong>Aliya Renee Khan</strong><br />
 					<a href = "resume_may_2018.pdf" >resume <br /></a>
-					<a href = "#two">current work </a>
+					<a href = "#two">current work <br/> </a>
 					<a href = "#three"> projects <br /></a>
 					<a href = "#four"> skills <br /></a>
 					<a href = "#five"> coursework <br /></a>
