Finally updated personal website with new experience, resume, etc.

--- a/new_personal_webiste/html5up-strata/index.html
+++ b/new_personal_webiste/html5up-strata/index.html
@@ -21,7 +21,7 @@
 					<a href="#" class="image avatar"><img src="images/LA_PROF_PIC.jpg" alt="" /></a>
 					<h1><strong>Aliya Renee Khan</strong><br />
 					<a href = "resume_may_2018.pdf" >resume <br /></a>
-					<a href = "#two">current work </a>
+					<a href = "#two">current work <br/> </a>
 					<a href = "#three"> projects <br /></a>
 					<a href = "#four"> skills <br /></a>
 					<a href = "#five"> coursework <br /></a>
@@ -38,68 +38,66 @@
 					<section id="one">
 						<header class="major">
 							<h2 style = "color: #d69722">Aliya Renee Khan </br>
-							anthropologist. researcher. engineer. fashion enthusiast. marketer. fair trade advocate. </h2>
+							anthropologist. researcher. marketer. programmer. sustainability and fair trade advocate. </h2>
 						</header>
-						<p>I am currently a fourth-year student at the University of Michigan studying Anthropology and Computer Science. I am fascinated by the way humans interact with their cultural environment and with technology. I am currently working on an honors thesis about ethical consumption, and would be very interested in speaking with fair-trade, sustainable, or cruelty-free businesses. In the past, I have worked in web development, social media, photography, ethnography, education, and museum studies. I have a heavy technical skillset through my experience in computer science. I am also a very strong writer. I am looking for opportunities for after I graduate in April 2019, and am hoping to find a job related to UI/UX design, project management, marketing, ethical fashion, ethnography, or social media. Feel free to reach out! </p>
+						<p>I am currently a fourth-year student at the University of Michigan studying Anthropology and Computer Science. I am fascinated by the way humans interact with their cultural environments and with technology. I am currently working on an honors thesis about ethical consumption, and would be very interested in speaking with fair-trade, sustainable, or cruelty-free businesses. In the past, I have worked in web development, social media, photography, ethnography, education, and museum studies. I have a heavy technical skillset through my experience in computer science. I am also a very strong writer. I am looking for opportunities for after I graduate in April 2019, and am hoping to find a job related to ethnography, writing, research, UI/UX design, project management, marketing, or museum studies. Feel free to reach out! </p>
 						<ul class="actions">
 							<li><a href="#five" class="button">Contact Me</a></li>
 						</ul>
 					</section>
 
-					<section id="two"> 
+					<!-- <section id="two"> 
 						<h2 style = "color: #d69722">Current Work</h2>
 						<p>I am currently in Guacimo, Costa Rica studying Food, Energy, and Water Systems at EARTH University. EARTH has a mission to develop rural communities by recruiting students with leadership potential from small villages in Latin America and Africa and teaching them about agrobusiness and entrepreneurship. When they graduate, the students have the skills to run their own sustainable farm or business, and possess a complex knowledge of every aspect of the agricultural process. These students are truly awe-inspiring with their commitment to their communities and their families and their desire to give back. They are confident, friendly, and possess a curiosity and love for the world that is sometimes easy to lose in the American society that I am used to. Having the opportunity to converse with them has been one of the most memorable experiences of my college career and further inspired me to give back to my own community and to the world that I live in. </p>
 
 					</section>
-
+ -->
 				<!-- Two -->
 					<section id="three">
 						<h2 style = "color: #d69722">Recent and Upcoming Work</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/india_map.png" class="image fit thumb"><img src="images/india_map.png" alt="" /></a>
-								<h3>ANKURI</h3>
-								<p>Website, Social Media, and Education. Working on developing website and social media connections. Conducting research and ethnographic interviews in Dehradun, India from July-August 2018.</p>
-							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/ruthven-placeholder.jpg" class="image fit thumb"><img src="images/ruthven-placeholder.jpg" alt="" /></a>
-								<h3>Ruthven Museum of Natural History</h3>
-								<p>Photogrammetry, 3D Modeling, Animation, and Museum Studies. Creating animations for exhibits in the new museum, which is scheduled to open in 2019.</p>
-							</article>
-							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/id_tech_image.png" class="image fit thumb"><img src="images/id_tech_image.png" alt="" /></a>
-								<h3>iD Tech Camps</h3>
-								<p>Education, Technology, Software Engineering. Taught C++, Python, Tynker, and Autodesk Maya to classes of around 6-8 students aged 7-17. Planned and organized activities for 50+ students per week.  </p>
-							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/gabii_pic.png" class="image fit thumb"><img src="images/gabii_pic.png" alt="" /></a>
-								<h3>The Gabii Project</h3>
-								<p>Photogrammetry, Archaeology, 3D Modeling. Travelled to Rome, Italy to assist in photogrammetry work in the summer of 2016. September 2015 - April 2017 developed 3D models of tombs and artifacts, organized project database. </p>
-							</article>
-							<article class="6u 12u$(xsmall) work-item">
-								<a href="./images/instagram_pic.png" class="image fit thumb"><img src="./images/instagram_pic.png" alt="" /></a>
-								<h3>@aliyakhan4</h3>
-								<p>Marketing, Photography, Fashion. Brand rep for @collegefashionista and @wearlively. Promoter of ethical fashion and makeup initiatives.</p>
-							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/book.jpg" class="image fit thumb"><img src="images/book.jpg" alt="" /></a>
-								<h3>Reading List</h3>
-								<p>My personal goal for 2018 is to read more about everything! See what's on my list at the moment.</p>
-							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
-								<!-- <a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a> -->
-								<h3>Photo Gallery</h3>
-								<p>Coming Soon<!-- Some of my recent personal work. Canon DSLR, some use of Photoshop. Includes portraits, landscape, food, and travel. --></p>
-							</article>
-							<article class="6u 12u$(xsmall) work-item">
-								<!-- <a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a> -->
+								<a href="https://medium.com/@aliyareneekhan" class="image fit thumb"><img src="images/writing.jpg" alt="" /></a>
 								<h3>Writing Portfolio</h3>
-								<p>Coming Soon<!-- A collection of my recent work, including research, academic, narrative, and poetry. --></p>
+								<p>A collection of my recent work, including research, academic, narrative, and poetry.</p>
+							</article>
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="images/india_map.png" class="image fit thumb"><img src="images/knitters.jpg" alt="" /></a>
+								<h3>Ethical Consumption Honors Thesis</h3>
+								<p>Research, Academic Writing, and Ethnography. Conducted research and interviews in Dehradun, India from July-August 2018. Formulating an extensive 50-75 page thesis about defining ethical business practices in different contexts.</p>
+							</article>
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="https://sites.lsa.umich.edu/mexican-exposures/" class="image fit thumb"><img src="images/ethnography_lab.png" alt="" /></a>
+								<h3>Mexican Exposures Ethnography Lab</h3>
+								<p>Ethnographic Coding, Medical Anthropology, and Research. Working with a team to code an extensive library of field notes using Atlas.ti. Analyzing the social role of consumption in the lives of individuals in Mexico City.</p>
+							</article>
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="https://www.ankuri.org/" class="image fit thumb"><img src="images/india_map.png" alt="" /></a>
+								<h3>ANKURI</h3>
+								<p>Website, Business, and Education. Developed website and social media connections. Formulated business strategies to sell ANKURI products in the United States. Worked with students aged 6-16 to teach English in a village community.</p>
+							</article>
+						</div>
+						<div class="row">
+							<article class="6u 12u$(xsmall) work-item">
+								<a href="https://lsa.umich.edu/ummnh" class="image fit thumb"><img src="images/ruthven-placeholder.jpg" alt="" /></a>
+								<h3>Ruthven Museum of Natural History</h3>
+								<p>Photogrammetry, 3D Modeling, Animation, and Museum Studies. Designing and rendering over 18000 frames of animation for exhibits in the new museum, which is scheduled to open in 2019.</p>
+								
+							</article>
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="https://gabii.cast.uark.edu/gabiigoesdigital/" class="image fit thumb"><img src="images/gabii_pic.png" alt="" /></a>
+								<h3>The Gabii Project</h3>
+								<p>Photogrammetry, Archaeology, 3D Modeling, and Museum Studies. Travelled to Rome, Italy to assist in photogrammetry work in the summer of 2016. September 2015 - April 2017 developed over 50 3D models of tombs and artifacts, organized project database. </p>
+							</article>
+							<article class="6u$ 12u$(xsmall) work-item">
+								<a href="https://www.idtech.com/locations/michigan-summer-camps/university-of-michigan" class="image fit thumb"><img src="images/id_tech_image.png" alt="" /></a>
+								<h3>iD Tech Camps</h3>
+								<p>Education, Technology, and Software Engineering. Taught C++, Python, Tynker, and Autodesk Maya to classes of around 6-8 students aged 7-17. Planned and organized activities for 50+ students per week.  </p>
 							</article>
 
 						</div>
 						<ul class="actions">
-							<li><a href="resume_may_2018.pdf" class="button">Official Resume</a></li>
+							<li><a href="images/Aliya_Master_Resume_September_2017.pdf" class="button">Official Resume</a></li>
 						</ul>
 					</section>
 				<!-- Three -->
@@ -108,7 +106,7 @@
 						<p> C++ | Python | HTML | CSS | JavaScript ES6 | react.js | SQL | ARM Assembly <p> 
 
 						<h4 style = "color: #d69722">Software Skills</h4>
-						<p> Autodesk Maya | Blender | Photogrammetry | 3D Modeling | Adobe Photoshop | MeshLab </p>
+						<p> Adobe Illustrator | Adobe Photoshop | Atlas.ti | Autodesk Maya | Blender | Photogrammetry | 3D Modeling </p>
 
 						<h4 style = "color: #d69722">Other Skills</h4>
 						<p> Photography | Social Media | Academic Writing | Ethnographic Research | Marketing | Spanish | Japanese </p>
@@ -119,13 +117,13 @@
 									<!-- Three -->
 					<section id="four">
 						<h4 style = "color: #d69722"> Computer Science Coursework </h3>
-						<p>EECS 485: Web Development | EECS 481: Software Engineering | EECS 376: Fundamentals of Computer Science | EECS 388: Security | EECS 203: Discrete Math | EECS 281: Data Structures and Algorithms | STATS 250: Statistics and Data Analysis</p>
+						<p>EECS 498: Social Computing | EECS 485: Web Development | EECS 481: Software Engineering | EECS 376: Fundamentals of Computer Science | EECS 388: Security | EECS 203: Discrete Math | EECS 281: Data Structures and Algorithms | STATS 250: Statistics and Data Analysis</p>
 
 						<h4 style = "color: #d69722">Anthropology Coursework</h3>
 						<p>ANTHRCUL 327: Medicine and Healing | ANTHRCUL 330: Culture, Thought, and Meaning | ANTHRCUL 202: Ethnic Diversity in Japan | ANTHRBIO 201: Biological Anthropology | ANTHRCUL 272: Language and Society | ANTHRARC 282: Prehistoric Archaeology</p>
 
 						<h4 style = "color: #d69722">Other Relevant Coursework</h3>
-						<p>SAC 376: New Media Theory | MATH 417: Linear Algebra | Three Semesters of Japanese Language | ASIAN 325: Zen Buddhism </p>
+						<p>RCSSCI 360: Documentary Photography | RCSSCI 360: Globalization and Global India | WRITING 201: Collecting Stories | MUSEUMS 301: Museums and Society | SAC 376: New Media Theory | MATH 417: Linear Algebra | Three Semesters of Japanese Language | ASIAN 325: Zen Buddhism </p>
 
 						<!-- <ul class="actions">
 							<li><a href="./coursework/coursework.html" class="button">Full Coursework List with Descriptions of Project Work</a></li>
