--- a/new_personal_webiste/html5up-strata/photo_gallery/index.html
+++ b/new_personal_webiste/html5up-strata/photo_gallery/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Parallelism by HTML5 UP</title>
+		<title>Aliya Renee Khan - Photo Gallery</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -26,9 +26,8 @@
 
 						<div id="header" class="item" data-width="400">
 							<div class="inner">
-								<h1>Parallelism</h1>
-								<p>A responsive portfolio site<br />
-								template by HTML5 UP</p>
+								<h1>Aliya Renee Khan</h1>
+								<p>Photo Gallery</p>
 							</div>
 						</div>
 
