Fixed image for Honors Thesis

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<p>A collection of my recent work, including research, academic, narrative, and poetry.</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/knitters.jpg" class="image fit thumb"><img src="images/knitters.jpg" alt="" /></a>
+								<a href="images/knitters.JPG" class="image fit thumb"><img src="images/knitters.JPG" alt="" /></a>
 								<h3>Ethical Consumption Honors Thesis</h3>
 								<p>Research, Academic Writing, and Ethnography. Conducted research and interviews in Dehradun, India from July-August 2018. Formulating an extensive 50-75 page thesis about defining ethical business practices in different contexts.</p>
 							</article>
