--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="https://www.instagram.com/aliyakhan4/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="https://www.linkedin.com/in/aliya-khan-046669111/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/aliyareneekhan" class="icon fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://www.linkedin.com/in/aliya-renee-khan-046669111/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
