--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.instagram.com/aliyakhan4/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/aliyareneekhan" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://www.linkedin.com/in/aliya-renee-khan-046669111/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="mailto:aliyakhan4@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Aliya Renee Khan </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
