Added email form

--- a/index.html
+++ b/index.html
@@ -166,6 +166,14 @@
 									</li>
 								</ul>
 							</div>
+							<form action="mailto:aliyakhan4@gmail.com" method="post" enctype="text/plain">
+								Name: <input type="text" name="name"><br>
+								E-mail Address:<input type="text" name="mail" size = "200"><br>
+								Message:<br><textarea type="text" name="comment"></textarea><br><br>
+								<input type="submit" value="Send">
+
+							</form>
+							
 						</div>
 					</section>
 
