--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/LA_PROF_PIC.jpg" alt="" /></a>
-					<h1><strong>Aliya Renee Khan</strong><br /></h1>
+					<h1><a href="#one"<strong>Aliya Renee Khan</strong><br /></a></h1>
 					<h1><a href = "images/Tech_Resume_Oct_2018.pdf" >résumé </a><br /></h1>
-					<h1><a href = "#three"> projects <br /></a></h1>
-					<h1><a href = "#four"> skills <br /></a></h1>
-					<h1><a href = "#five"> coursework <br /></a></h1>
+					<h1><a href = "#two"> projects <br /></a></h1>
+					<h1><a href = "#three"> skills <br /></a></h1>
+					<h1><a href = "#four"> coursework <br /></a></h1>
 					<!-- portfolio <br />  -->
-					<h1><a href = "#six"> contact <br /></a></h1>
+					<h1><a href = "#five"> contact <br /></a></h1>
 					<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 				</div>
 			</header>
@@ -52,7 +52,7 @@
 					</section>
  -->
 				<!-- Two -->
-					<section id="three">
+					<section id="two">
 						<h2 style = "color: #d69722">Recent and Upcoming Work</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
